# tde-win-deco-Q4WIN10

./: CMakeLists.txt  Makefile  Makefile.am  README.md  create_deb.sh  q4win10.cpp  q4win10.h  q4win10button.cpp  q4win10button.h  q4win10client.cpp  q4win10client.h  tdedecoration-twin-q4win10_2.0_amd64.deb
config/: CMakeLists.txt  Makefile  Makefile.am  config.cpp  config.h  configdialog.ui
package_build/DEBIAN/: control
package_build/opt/trinity/share/apps/twin/: q4win10.desktop
